<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tr_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jo@todo.todo">jo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann_json</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>tr_driver_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <build_depend>liblely-coapp</build_depend>
  <exec_depend>liblely-coapp</exec_depend>
  <build_depend>liblely-util</build_depend>
  <exec_depend>liblely-util</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
