<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tr_kinematics_differential2</name>
    <version>1.0.0</version>
    <description>transformation node for neobotix robots with differential drive ROS 2</description>
    <author>Jan-Niklas Nieland</author>
    <author>Max Wittal</author>
    <author>Pradheep Padmanabhan</author>
    <maintainer email="ros@neobotix.de">Neobotix GmbH</maintainer>
    <maintainer email="wittal@neobotix.de">Max Wittal</maintainer>
    <maintainer email="padmanabhan@neobotix.de">Pradheep Padmanabhan</maintainer>
    <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>

</package>